publicDir: './unode-module/Build.web/Build'

--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover" />
   </head>
-  <body>
-    <div id="root"></div>
+  <style>
+    body {
+      padding: 0;
+      border: 0;
+      margin: 0;
+      display: grid;
+    }
+    body > * {
+      width: 100dvw;
+      height: 100dvh;
+      grid-column: 1;
+      grid-row: 1;
+    }
+  </style>
+  <body style="padding: 0; border: 0; margin: 0; ">
+    <canvas id="unity-canvas" tabindex="-1"></canvas>
+    <script src="Build.web.loader.js"></script>
+    <script>
+      createUnityInstance(document.querySelector("#unity-canvas"), {
+        arguments: [],
+        dataUrl: "Build.web.data",
+        frameworkUrl: "Build.web.framework.js",
+        codeUrl: "Build.web.wasm",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "unode-module",
+        productVersion: "1.0",
+        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+      }).then((unityInstance) => {
+      }).catch((message) => {
+        alert(message);
+      });
+    </script>    
+    <div id="html-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
