--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover" />
+    <title>Unity Node Api Test</title>
+    <script type="module">
+      import { author, version } from './package.json';
+      { const meta = document.createElement("meta"); meta.name = "author"; meta.content = author; document.head.appendChild(meta); }
+      { const meta = document.createElement("meta"); meta.name = "version"; meta.content = version; document.head.appendChild(meta); }
+    </script>
   </head>
   <style>
     body {
