--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Unity Node Api Test</title>
   </head>
   <style>
@@ -12,16 +12,18 @@
       margin: 0;
     }
     body {
-      display: grid;
+      display: flex;
+      flex-direction: column;
+      height: 100dvh;
+      overflow: hidden;
       background-color: black;
     }
     body > * {
-      width: 100dvw;
-      height: 100dvh;
+      width: 100%;
+      height: 100%;
       outline: none;
-      overflow: hidden;
-      grid-column: 1;
-      grid-row: 1;
+      position: absolute;
+      top: 0; left: 0; bottom: 0; right: 0;
     }
   </style>
   <body>
